added to git ignore

--- a/gradle.properties
+++ b/gradle.properties
@@ -18,3 +18,6 @@ android.useAndroidX=true
 # Automatically convert third-party libraries to use AndroidX
 android.enableJetifier=true
 
+#Google API Key for Firebase
+Google_ApiKey="AIzaSyAuA2UP5UZIso65i_nHUFnYi77Ryw2O-Wo"
+
