--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ViewStandardsActivity"></activity>
+        <activity android:name=".CreateTestActivity"></activity>
+        <activity android:name=".CreateQuestionActivity" />
+        <activity android:name=".ViewStandardsActivity" />
         <activity android:name=".CreateAccountActivity" />
         <activity android:name=".DashboardActivity" />
         <activity android:name=".MainActivity">
@@ -22,6 +24,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <meta-data
+            android:name="preloaded_fonts"
+            android:resource="@array/preloaded_fonts" />
     </application>
 
 </manifest>
