--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:theme="@style/AppTheme">
         <activity android:name=".CreateTestActivity"></activity>
         <activity android:name=".CreateQuestionActivity" />
-        <activity android:name=".ViewStandardsActivity" />
+        <activity android:name=".ViewEditTestsActivity" />
         <activity android:name=".CreateAccountActivity" />
         <activity android:name=".DashboardActivity" />
         <activity android:name=".MainActivity">
