--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".CreateTestActivity"></activity>
+        <activity android:name=".EditExistingTestActivity"></activity>
+        <activity android:name=".CreateTestActivity" />
         <activity android:name=".CreateQuestionActivity" />
         <activity android:name=".ViewEditTestsActivity" />
         <activity android:name=".CreateAccountActivity" />
