--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,8 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:windowSoftInputMode="adjustResize">
-        <activity android:name=".EditExistingTestActivity"></activity>
+        <activity android:name=".StandardCoverageActivity"></activity>
+        <activity android:name=".EditExistingTestActivity" />
         <activity android:name=".CreateTestActivity" />
         <activity android:name=".CreateQuestionActivity" />
         <activity android:name=".ViewEditTestsActivity" />
